finimalism7.css
@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');

#txtCustomCss, #txtLocalCustomCss {
	height: 400px !important;
	max-height: none !important;
	overflow-y: scroll !important;
	resize: vertical !important;
}

.customCssContainer textarea {
	height: auto !important;
}

html {
	color: #fff;
	color: rgba(255, 255, 255, 1);
}

.backgroundContainer, .preload {
	background-color: #0f031f;
}

.itemsContainer.padded-left {
	position: top;
	z-index: 1;
}

.sections.homeSectionsContainer::before {
	content: '';
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
	background-size: cover;
	opacity: 0;
	z-index: -1;
	background-attachment: fixed;
}

.pageTabContent.is-active::before {
	content: '';
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
	background-size: cover;
	opacity: 0.925;
	filter: brightness(90%);
	z-index: -1;
	background-attachment: fixed;
}

.detailPagePrimaryContainer {
	position: relative;
	z-index: 2;
}

.detailPagePrimaryContainer::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
	background-size: cover;
	opacity: 0.85;
	z-index: -1;
	filter: saturate(65%) brightness(105%);
}

.detailPageSecondaryContainer {
	position: relative;
	z-index: 1;
}

.detailPageSecondaryContainer::before {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: url(https://i.imgur.com/dGBenC7.jpeg) center top no-repeat #030322;
	background-size: cover;
	opacity: 0.925;
	z-index: -1;
	filter: saturate(75%) brightness(95%) contrast(100%);
}

.headerTop {
	padding: 0.95em;
}

body {
	font-family: "Sofia Sans", sans-serif;
	font-size: 12pt;
}

.layout-mobile body {
	font-size: 12pt;
}

h2 {
	font-size: 1.3em;
}

.layout-desktop .card,
.layout-tv .card {
	font-size: 1em;
}

.cardScalable {
	margin-bottom: 0.2em;
}

.textActionButton {
	font-size: 1.1em;
	transition: color 0.3s, font-weight 0.3s;
}

.textActionButton:hover {
	-webkit-text-decoration: none;
	text-decoration: none;
	color: #15afe6;
	font-weight: 700;
}

.cardText-secondary, 
.fieldDescription, 
.guide-programNameCaret, 
.listItem .secondary, 
.nowPlayingBarSecondaryText, 
.programSecondaryTitle, 
.secondaryText {
	color: rgba(255, 255, 255, 0.75);
}

.layout-mobile .card {
	font-size: 12pt !important;
}

@media (min-height: 31.25em) {
	[dir="ltr"] .padded-right-withalphapicker {
	padding-left: max(env(safe-area-inset-left),3.7%);
	padding-right: 7.5%;
	padding-right: max(env(safe-area-inset-right),3.5%);
	}
}

.parentName {
	margin: 0 0 0;
}

.hide + .detailPageWrapperContainer .itemName {
	display: none !important;
}

div.itemMiscInfo.itemMiscInfo-primary {
	font-size: 12pt;
}

.layout-desktop div.itemMiscInfo.itemMiscInfo-primary,
.layout-tv div.itemMiscInfo.itemMiscInfo-primary {
	font-size: 12pt;
}

p.overview.detail-clamp-text {
	font-size: 1.1em;
	color: #fff;
	font-weight: 400;
}

#itemDetailPage .tagline {
	font-weight: 600;
	font-size: 1.15em;
}

.layout-mobile p.overview.detail-clamp-text {
	font-size: 12pt; 
}

span.homeLibraryText {
	font-family: "Sofia Sans", sans-serif;
	font-size: 1.2em;
	transform: translateY(5%);
}

.layout-mobile span.homeLibraryText {
	font-size: 12pt;
}

.innerCardFooter.fullInnerCardFooter.innerCardFooterClear {
	background: rgba(0, 0, 0, 0);
	right: 0;
	left: 0;
	top: 0;
	bottom: 0;
	margin: 0;
}

.itemProgressBarForeground {
	background: linear-gradient(90deg, rgb(1, 9, 40) 0%, rgb(36, 75, 147) 45%, rgb(23, 125, 255) 85%, rgb(24, 170, 222) 100%);
}

.itemBackdrop {
	height: 25.5em !important;
	display: inherit;
}

.layout-desktop .detailRibbon,
.layout-tv .detailRibbon {
	margin-top: -1.925em;
	padding-top: 0em;
	padding-bottom: 0em;
}

.layout-tv .detailRibbon {
	margin-top: -4em !important;
}

.layout-desktop .detailImageContainer .card,
.layout-tv .detailImageContainer .card {
	top: 18vh;
}

[dir="ltr"] .detailPageContent {
	padding-left: 31em;
	padding-right: 0%;
}


.layout-desktop .itemName.infoText.parentNameLast,
.layout-tv .itemName.infoText.parentNameLast {
	display: block;
	text-align: center;
}

.layout-desktop [dir="ltr"] .detailPagePrimaryContainer, .layout-tv [dir="ltr"] .detailPagePrimaryContainer {
	padding-left: 31em;
}

.hide+.detailPageWrapperContainer .itemName {
	display: block !important;
}

.itemName {
	margin: .5em 0 !important;
}

.layout-mobile .itemName.infoText.parentNameLast {
	display: block;
	font-size: 1.3em;
}

:root {--selection: 170, 95, 200;}

.backgroundContainer.withBackdrop {
	background-color: rgba(0, 0, 0, 0);
}

.emby-select-withcolor > option {
	color: inherit;
	background: #11091d;
}

#user_usage_report_table,
.detailTable {
	background: rgba(0,0,0,.5);
}
.detailTableBodyRow-shaded {
	background: #0000 !important;
}

.infoBanner {
	background: #101010;
}
.navMenuOptionText {
	margin-top: 0;
}
.backgroundProgress > div {
	background-color: #0000;
}

.visualCardBox, .cardImageContainer {
	box-shadow: none;
}

.mdl-switch__input:checked + .mdl-switch__label + .mdl-switch__trackContainer > .mdl-switch__track {
	background: rgba(120, 120, 120, 0.6);
}
.mdl-switch__input:checked + .mdl-switch__label + .mdl-switch__trackContainer > .mdl-switch__thumb {
	background: white;
}

.dashboardSection h3 {
	margin-left: 0.5em;
}
.sessionCardFooter {
	border: none;
}
.paperList, 
.visualCardBox {
	background-color: rgba(0, 0, 0, 0.5);
}
.listItem-border {
	border-color: rgba(255, 255, 255, 0) !important; 
}
fieldset {
	border: 1px solid rgba(4, 4, 4, 0.8); 
	border-radius: 0.4em;
}

.layout-desktop .detailRibbon,
.layout-tv .detailRibbon {
	background: rgba(255,255,255,.1) !important;
	height: 6em;
}
/* ... */

